@@ -28,10 +28,13 @@ public class HospitalManager extends ResourceBasedManager<Hospital> {
         return HOSPITAL_MANAGER;
     }
 
-    private HospitalManager() { super(); }
+    private HospitalManager() {
+        super();
+    }
 
     @Override
-    public void init() {}
+    public void init() {
+    }
 
     @Override
     protected Collection<ResourceEntry> getResources() {
@@ -43,7 +46,7 @@ public class HospitalManager extends ResourceBasedManager<Hospital> {
         String name = line.get(0).trim();
         Hospital hospital = new Hospital(name, countryCode);
 
-        return Arrays.asList(new Tuple<>(name.toUpperCase(), hospital));
+        return List.of(new Tuple<>(name.toUpperCase(), hospital));
     }
 
     @Override
